--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="containerA">
             <div class="navigation">
                 <h2>RASHED.JR</h2>
-                <button>Download Resume</button>
+                <button><a href="https://linkedin.com/rashedjamanraju" target="_blank">Download Resume</a></button>
             </div>
         </div>
 
@@ -24,9 +24,128 @@
                 </div>
                 <h2>"In the near future, I hope to become a Developer."</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                <button>Contact with me</button>
+                <button><a href="#footer">Contact with me</a></button>
             </div>
         </div>
+        
+        <div class="containerA">
+            <!-- Section 03 Mission Section -->
+            <div class="mission-section">
+                <div class="mission-question">
+                    <h2>Why Web Development??</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="mission-ansA">
+                    <div class="mission-ans-text-A">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href=""><button class="mission-btn">Learn More</button></a>
+                    </div>
+                    <div class="g0">
+                        <img src="assets/Layer_1.png" alt="" width="100%" height="100%">
+                    </div>
+                </div>
+                <!-- =============================== -->
+                <div class="mission-ansB">
+                    <div class="g1">
+                        <img src="assets/Group 3.png" alt="" width="100%" height="100%">
+                    </div>
+                    <div class="mission-ans-text-B">
+                        <h3>I will help People by creating Modern Web System</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href=""><button class="mission-btn">Learn More</button></a>
+                    </div>
+                </div>
+                <!-- ================================= -->
+                <div class="mission-ansC">
+                    <div class="mission-ans-text-C">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href=""><button class="mission-btn">Learn More</button></a>
+                    </div>
+                    <div class="g2">
+                        <img src="assets/Group 4.png" alt="" width="100%" height="100%">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Section 04 Inspiration Section -->
+             <div class="inspiration">
+                <div class="inspiration-text">
+                    <h2>My Inspiration</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="inspiration-video">
+                    <div>
+                        <video src="videos/From 1 Gig to 25 MB - How To Compress Large Videos To Smaller Sizes Without Losing Quality Using App.mp4" controls>sdvfsdefgsergt</video>
+                    </div>
+                </div>
+             </div>
+
+             <!-- Section 05 Target Section -->
+              <div class="target">
+                <div class="target-text">
+                    <h2>My Current Target</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="target-row">
+                    <div class="items">
+                        <div class="item itemA">
+                            <div class="img-container">
+                                <img src="assets/html.png" alt="" width="100%" height="100%">
+                            </div>
+                            <h3>HTML</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                        <div class="item itemB">
+                            <div class="img-container">
+                                <img src="assets/css.png" alt="" width="100%" height="100%">
+                            </div>
+                            <h3>CSS</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                        <div class="item itemC">
+                            <div class="img-container">
+                                <img src="assets/js.png" alt="" width="100%" height="100%">
+                            </div>
+                            <h3>HTML</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+
+              </div>
+
+            <!-- Section 06 Support Section -->
+             <div class="support">
+                <div class="support-text">
+                    <h2>I need Support</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="support-clickable">
+                    <input type="text" name="" id="" placeholder="Suggest me any feedback for me"><button>Submit</button>
+                </div>
+             </div>
+
     </header>
+    <footer id="footer">
+        <div class="containerA">
+            <p class="footer-text">An Open Commitment by Rashed Jaman Raju</p>
+            <ul>
+                <li><a href="https://www.facebook.com/rashedjr11/" target="_blank">
+                    <img src="assets/facebook.png" alt="">
+                </a></li>
+                <li><a href="https://github.com/rashedjamanraju" target="_blank">
+                    <img src="assets/github.png" alt="">
+                </a></li>
+                <li><a href="https://linkedin.com/rashedjamanraju" target="_blank">
+                    <img src="assets/linkedin-icon 1.png" alt="">
+                </a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
