--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="img-container">
                                 <img src="assets/js.png" alt="" width="100%" height="100%">
                             </div>
-                            <h3>HTML</h3>
+                            <h3>JavaScript</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing.</p>
                             <a href="">Learn More</a>
                         </div>
