--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="assets/Group.png" alt="" width="100%" height="100%">
                 </div>
                 <h2>"In the near future, I hope to become a Developer."</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>My journey into web development is driven by a passion for creating efficient, user-friendly, and aesthetically pleasing applications. As I continue to hone my skills, I aim to tackle more complex projects and contribute to exciting, forward-thinking initiatives in the tech world.</p>
                 <button><a href="#footer">Contact with me</a></button>
             </div>
         </div>
@@ -33,12 +33,12 @@
             <div class="mission-section">
                 <div class="mission-question">
                     <h2>Why Web Development??</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p>Web development combines creativity and technical skills to build websites and applications that solve real-world problems and enhance the user experience. It's an ever-evolving field with endless possibilities.</p>
                 </div>
                 <div class="mission-ansA">
                     <div class="mission-ans-text-A">
                         <h3>I will Do Coding and Change The World</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p>By writing code, I aim to create innovative solutions that make a positive impact on people's lives, helping to shape a better, more connected world.</p>
                         <a href=""><button class="mission-btn">Learn More</button></a>
                     </div>
                     <div class="g0">
@@ -52,15 +52,17 @@
                     </div>
                     <div class="mission-ans-text-B">
                         <h3>I will help People by creating Modern Web System</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p>With modern web systems, I can provide businesses and individuals with the tools they need to succeed in the digital age, making processes more efficient and accessible.</p>
                         <a href=""><button class="mission-btn">Learn More</button></a>
                     </div>
                 </div>
                 <!-- ================================= -->
                 <div class="mission-ansC">
                     <div class="mission-ans-text-C">
-                        <h3>I will Do Coding and Change The World</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h3>I Will Empower Through Technology
+                        </h3>
+                        <p>By leveraging cutting-edge technology, I strive to empower individuals and organizations, providing them with the digital solutions they need to thrive in an increasingly connected world.
+                        </p>
                         <a href=""><button class="mission-btn">Learn More</button></a>
                     </div>
                     <div class="g2">
@@ -73,7 +75,8 @@
              <div class="inspiration">
                 <div class="inspiration-text">
                     <h2>My Inspiration</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p>I'm driven by a passion for web development, creating impactful, user-friendly experiences. My goal is to combine functionality with aesthetics in everything I build.
+                    </p>
                 </div>
                 <div class="inspiration-video">
                     <div>
@@ -86,7 +89,7 @@
               <div class="target">
                 <div class="target-text">
                     <h2>My Current Target</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p>Continuing to push the boundaries of web development by mastering new technologies and refining my skills to create dynamic and engaging user experiences.</p>
                 </div>
                 <div class="target-row">
                     <div class="items">
@@ -95,7 +98,7 @@
                                 <img src="assets/html.png" alt="" width="100%" height="100%">
                             </div>
                             <h3>HTML</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p>Diving deeper into HTML to structure web content efficiently and accessibly.</p>
                             <a href="">Learn More</a>
                         </div>
                         <div class="item itemB">
@@ -103,7 +106,7 @@
                                 <img src="assets/css.png" alt="" width="100%" height="100%">
                             </div>
                             <h3>CSS</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p>Enhancing web pages with sophisticated styles and responsive designs using CSS.</p>
                             <a href="">Learn More</a>
                         </div>
                         <div class="item itemC">
@@ -111,7 +114,7 @@
                                 <img src="assets/js.png" alt="" width="100%" height="100%">
                             </div>
                             <h3>JavaScript</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p>Building interactive and dynamic web applications through advanced JavaScript techniques.</p>
                             <a href="">Learn More</a>
                         </div>
                     </div>
@@ -123,7 +126,8 @@
              <div class="support">
                 <div class="support-text">
                     <h2>I need Support</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Your feedback is invaluable to me. If you have any suggestions or questions, please let me know. I’m here to help!
+                    </p>
                 </div>
                 <div class="support-clickable">
                     <input type="text" name="" id="" placeholder="Suggest me any feedback for me"><button>Submit</button>
