linkedin link updated

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <li><a href="https://github.com/rashedjamanraju" target="_blank">
                     <img src="assets/github.png" alt="">
                 </a></li>
-                <li><a href="https://linkedin.com/rashedjamanraju" target="_blank">
+                <li><a href="https://www.linkedin.com/in/rashedjamanraju?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                     <img src="assets/linkedin-icon 1.png" alt="">
                 </a></li>
             </ul>
